# qualiaDB

./: .cursorrules  .gitignore  AGENTS.md  AI_INSTRUCTIONS.md  ANDROID_REMINDER.md  ARCHITECTURE.md  BUILD_ERRORS_TRACKING.md  BUILD_ISSUES.md  CHANGELOG.md  CLAUDE.md  CLI_TESTING.md  CONTRIBUTORS.md  Cargo.toml  DOCUMENTATION_UPDATE_SUMMARY.md  FIX_PLAN.md  FLUTTER_REMINDER.md  HANDOVER.md  LICENSE  MOCK_PIPELINE_FIX.md  NEW_SESSION_PROMPT.md  PLAN.md  Q42_ENHANCEMENT_PLANNING.md  README.md  SPARQL_11_IMPLEMENTATION_PLAN.md  SPARQL_FINAL_COMPREHENSIVE_SUMMARY.md  SPARQL_FINAL_SUMMARY.md  SPARQL_IMPLEMENTATION_SUMMARY.md  SPARQL_SESSION_SUMMARY.md  SPARQL_STAR_ARCHITECTURAL_INTEGRATION.md  SPARQL_STAR_PROGRESS.md  STUB_REPLACEMENT_PLAN.md  TODO.md  _config.yml  analytics.html  anatomy.html  approved_developers.html  benchmark.html  benchmark_visualizer.html  compile_errors.txt  cooperative.html  (+42 more)
crates/qualia-cli/: Cargo.toml
crates/qualia-cli/src/: benchmark_env.rs  compress.rs  evaluate.rs  ingest.rs  llm_lifecycle.rs  llm_testing.rs  llm_testing_old.rs  main.rs  qpu.rs  resources.rs  science.rs  solve.rs  telemetry_server.rs
crates/qualia-cli/src/bench/: mod.rs  sparql_bench.rs
crates/qualia-cli/src/ingest/: csv_mapper.rs  detect.rs  json_mapper.rs  mapper.rs  mod.rs  pipeline.rs  writer.rs
crates/qualia-cli/src/parsers/: cbor_parser.rs  chk_parser.rs  external_sort.rs  json_ld_stream.rs  mod.rs  n3_star.rs  nquads_star.rs  ntriples_star.rs  trig_star.rs  turtle_star.rs
crates/qualia-cli/src/query/: compiler.rs
crates/qualia-client-core/: Cargo.toml
crates/qualia-client-core/src/: anatomy_context.rs  api.rs  app_registry.rs  bundled_ontologies.rs  bundled_qapps.rs  chat_agents.rs  chat_files.rs  chat_graph.rs  chat_inference.rs  chat_ontology.rs  chat_relay.rs  chat_retrieval.rs  chat_session.rs  context_binding.rs  guardianship.rs  inference_backend.rs  lib.rs  model_lifecycle.rs  model_preferences.rs  ontology_router.rs  ontology_workbench.rs  prerequisites.rs  q42_compress.rs  qapp_api.rs  qapp_manifest.rs  qapp_mcp.rs  qapp_paths.rs  qapp_registry.rs  qapp_version.rs  qapps_protocol.rs  qpu_dispatcher.rs  qpu_oracle.rs  qpu_pipeline.rs  resource_import.rs  social_connect.rs  state.rs  system_telemetry.rs  update_installer.rs  user_profile.rs  vision_ingest.rs
crates/qualia-client-core/src/engine/: ingestion.rs  llm_offload.rs  mod.rs  q42_compiler.rs
crates/qualia-core-db/: Cargo.toml  build.rs  cargo_err.txt  check_errors.json  clippy.json  qualia_global.wal
crates/qualia-core-db/benches/: clinical_zero_allocation.rs  qualia_benchmark.rs  ram_usage.rs
crates/qualia-core-db/examples/: owl_to_shacl.rs
crates/qualia-core-db/scripts/: mock_native_daemon.js  test_wasm_offload.html
crates/qualia-core-db/shapes/: core-modalities.shacl.ttl  infrastructure.shacl.ttl  qualia-client-extensions.shacl.ttl  specialized-libraries.shacl.ttl
crates/qualia-core-db/src/: acoustic_ble_mesh.rs  agency.rs  ambient_orchestration.rs  archive.rs  bioinformatics.rs  cbor_compiler.rs  chat_relay_daemon.rs  clinical_engine.rs  comorbidity_eval.rs  crdt.rs  csd_storage.rs  daemon.rs  daemon_graph.rs  daemon_query.rs  daemon_swarm.rs  deontic_logic.rs  dev_protocol.rs  dicom.rs  dicom_ingest.rs  directml_bridge.rs  ebpf_filter.rs  ebpf_firewall.rs  economics.rs  epistemic.rs  extension_bus.rs  extension_manifest.rs  fiduciary_crypto.rs  fuzz_testing.rs  geometric.rs  ggml_quants.rs  gguf_bridge.rs  gguf_sharder.rs  git_bridge.rs  identifier.rs  ilp_dispatcher.rs  indexing.rs  ingest.rs  ingestion.rs  jni_bridge.rs  key_vault.rs  (+85 more)
crates/qualia-core-db/src/domains/: mod.rs
crates/qualia-core-db/src/geometric_algebra/: mod.rs  simd_kernel.rs
crates/qualia-core-db/src/lora/: adapter_manager.rs  context_detector.rs  mod.rs  webgpu_lora.rs
crates/qualia-core-db/src/modalities/: argumentation.rs  asp.rs  control_feedback.rs  dialectical.rs  diffusion.rs  dl.rs  epistemic.rs  graph_theory.rs  interval_reasoning.rs  linear.rs  mod.rs  paraconsistent.rs  probabilistic.rs  spatio_temporal.rs  temporal_ltl.rs
crates/qualia-core-db/src/obfuscation/: domain_transformer.rs  hybrid_state_manager.rs  mod.rs  polynomial_obfuscator.rs  semantic_stripper.rs
crates/qualia-core-db/src/p2p/: mod.rs  protocol.rs  routing.rs  swarm.rs
crates/qualia-core-db/src/shaders/: calculus.wgsl  diffusion.wgsl  fluid_dynamics.wgsl  fused_attention.wgsl  fused_tensor_contraction.wgsl  fused_transformer.wgsl  kinematics.wgsl  lora_apply.wgsl  molecular_dynamics.wgsl  quantized_embedding.wgsl  quantum_bio.wgsl  sieve.wgsl
crates/qualia-core-db/src/solvers/: mod.rs
crates/qualia-core-db/src/sparql_library/: external_sort.rs  mod.rs  sparql_aggregates.rs  sparql_ast.rs  sparql_endpoint.rs  sparql_executor.rs  sparql_extensions.rs  sparql_filter.rs  sparql_parser.rs  sparql_planner.rs  sparql_shacl.rs  (+3 more)
crates/qualia-core-db/tests/: identifier_tests.rs  llm_model_testing.rs  obfuscation_pipeline_tests.rs  resolver_tests.rs  sparql_star_tests.rs  test.q42  topological_simd_integration.rs  vm_safety_tests.rs
crates/qualia-desktop/: Cargo.toml  settings.html  tauri.conf.json
crates/qualia-desktop/icons/: icon.icns
crates/qualia-desktop/src/: app_registry.rs  llm_offload.rs  main.rs  q42_compiler.rs
crates/qualia-extensions/: Cargo.toml  README.md  install.ps1  install.sh
crates/qualia-extensions/src/: lib.rs  pinn_extension.rs  qpu_extension.rs  snn_extension.rs  webgpu_extension.rs
crates/qualia-flutter/rust/: Cargo.toml
crates/qualia-mobile-harness/: Cargo.toml  Dioxus.toml
crates/qualia-mobile-harness/assets/: sync_io_worker.js
crates/qualia-mobile-harness/src/: main.rs
crates/qualia-solid-bridge/: Cargo.toml
crates/qualia-solid-bridge/src/: ldp_translator.rs  lib.rs  oidc_micro_idp.rs  solid_proxy.rs
crates/qualia-studio/: Cargo.toml  THEMING.md
crates/qualia-studio/src/: main.rs  pane_registry.rs  studio_canvas.rs  theme_engine.rs
crates/webizen-studio/: Cargo.toml  PAGES.md
crates/webizen-studio/src/: main.rs  pane_registry.rs  studio_canvas.rs  telemetry.rs
(+887 files in other folders)
