[package]
name = "qualia-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
qualia-core-db = { path = "../qualia-core-db" }
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
git2 = "0.18"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
