[package]
name = "qualia-cli"
version = "0.0.10"
edition = "2021"
authors = ["Timothy Charles Holborn <timothy.holborn@gmail.com>"]
default-run = "qualia-cli"

[[bin]]
name = "q42_comparative_bench"
path = "src/bin/q42_comparative_bench.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
qualia-core-db = { path = "../qualia-core-db" }
qualia-client-core = { path = "../qualia-client-core" }
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "multipart"] }
git2 = "0.18"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
chrono = "0.4.44"
tungstenite = "0.29.0"
sysinfo = "0.39.3"
futures-util = "0.3.32"
bytemuck = { version = "1.14", features = ["derive"] }
rio_xml = "0.8"
rio_api = "0.8"
lz4_flex = "0.11"
sha1 = "0.11.0"
minicbor = "2.2.2"
