[package]
name = "qualia-client-core"
version = "0.0.8"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
qualia-core-db = { path = "../qualia-core-db" }
futures-util = "0.3"
bip39 = { version = "2.2.2", features = ["rand"] }
rand = "0.10.1"
lazy_static = "1.4"
base64 = "0.22"
hex = "0.4.3"
sha2 = { version = "0.10", default-features = false }
byteorder = "1.5.0"
pdf-extract = "0.10.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
sha1 = "0.10"
url = "2.5"
urlencoding = "2.1"
ed25519-dalek = "2.2.0"
rtrb = "0.3.4"
tiny_http = "0.12"
bytemuck = "1.14"
lz4_flex = "0.11"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
dhat = "0.3.3"
