[package]
name = "qualia-core-db"
version = "0.0.10"
edition = "2021"
authors = ["Timothy Charles Holborn <timothy.holborn@gmail.com>"]

[features]
default = ["profile_target_1024"]

# Enforces explicit stack boundaries restricting memory caching paths under 512MB RAM rules
profile_minimal_512 = []
profile_target_1024 = ["alloc_buffers"]
profile_accelerated = ["alloc_buffers", "neon_simd_unroll"]
# Enables the WASM SIMD vectorized execution branch in webizen_bytecode.
# Only has effect on wasm32 targets compiled with SIMD support (-C target-feature=+simd128).
wasm_simd = []

# CUDA GPUDirect Storage support (Linux only, requires NVIDIA drivers and cuFile library)
# This is an opt-in feature for edge nodes with NVIDIA hardware
cuda_gds = []

# QPU internal functionality (undocumented, private)
# This feature gate enables internal QPU modules that are not publicly documented
qpu_internal = []

# Feature dependencies
alloc_buffers = []
neon_simd_unroll = []
vm_tracing = []

[dependencies]
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-intrusive = { version = "0.5", default-features = false, features = ["alloc"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_bytes = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }
half = "2.4"
memmap2 = "0.9"
log = "0.4"
ed25519-dalek = { version = "2.1", default-features = false }
sha2 = { version = "0.10", default-features = false }
quick-xml = "0.36"
crossbeam-channel = "0.5"
core_affinity = "0.8"
num_cpus = "1.16"
rio_xml = "0.8"
rio_turtle = "0.8"
rio_api = "0.8"
lz4_flex = "0.11"
rtrb = "0.3.4"
rand = "0.10.1"
hex = "0.4.3"
sha1 = "0.10"
urlencoding = "2.1"
ciborium = "0.2.2"
async-trait = "0.1.89"
dashmap = "6.2.1"
rand_distr = "0.6.0"
rayon = "1.12.0"

[lib]
crate-type = ["rlib", "cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "File",
    "Navigator",
    "Window"
] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4"

[target.'cfg(all(windows, target_arch = "x86_64"))'.dependencies]
# Force a specific, stable version to prevent transitive conflicts and 32-bit fallback macros
windows = { version = "0.58", features = [
    "Win32_AI_MachineLearning_DirectML",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.19"
warp = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
zstd = "0.13"
sysinfo = "0.30"
libp2p = { version = "0.56.0", features = ["tcp", "dns", "noise", "yamux", "request-response", "kad", "mdns", "macros", "tokio"] }
reqwest = { version = "0.13.4", features = ["json", "rustls"] }
boringtun = "0.7.1"
rcgen = "0.14.8"
# DNSSEC and WireGuard dependencies for SocialWireGuard bootstrapping
trust-dns = { version = "0.23.2", features = ["dnssec", "dns-over-rustls"] }
trust-dns-resolver = "0.23.2"
# wireguard-rs = "0.1.1" # Currently unavailable - commented out
base64 = "0.22"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }


getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
criterion = "0.8.2"
dhat = "0.3.3"
proptest = "1.11.0"
tempfile = "3.10"
serial_test = "3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bench]]
name = "qualia_benchmark"
harness = false

[[bench]]
name = "ram_usage"
harness = false
