[package]
name = "qualia-desktop"
version = "0.0.4"
edition = "2021"
authors = ["Timothy Charles Holborn <timothy.holborn@gmail.com>"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "os-all", "updater", "system-tray" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
open = "5"
qualia-core-db = { path = "../qualia-core-db" }

[features]
custom-protocol = ["tauri/custom-protocol"]
