[package]
name = "qualia-desktop"
version = "0.0.5"
edition = "2021"
authors = ["Timothy Charles Holborn <timothy.holborn@gmail.com>"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "os-all", "updater", "system-tray" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
open = "5"
qualia-core-db = { path = "../qualia-core-db" }
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
mime_guess = "2.0"
pdf-extract = "0.7"
rtrb = "0.3.1"
byteorder = "1.5"
bip39 = { version = "2.2.2", features = ["rand"] }
rand = "0.10.1"
tokio = { version = "1.52.3", features = ["time"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
