[package]
name = "qualia-desktop"
version = "0.0.7"
edition = "2021"
authors = ["Timothy Charles Holborn <timothy.holborn@gmail.com>"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "os-all", "updater", "system-tray" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
base64 = "0.22"
open = "5"
qualia-core-db = { path = "../qualia-core-db" }
qualia-client-core = { path = "../qualia-client-core" }
futures-util = "0.3"
mime_guess = "2.0"
pdf-extract = "0.7"
rtrb = "0.3.1"
byteorder = "1.5"
bip39 = { version = "2.2.2", features = ["rand"] }
rand = "0.10.1"
librqbit = "8"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
hex = "0.4.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
