[package]
name = "qualia-extensions"
version = "0.1.0"
edition = "2021"
description = "Advanced computational extensions for QualiaDB"
license = "MIT"
authors = ["QualiaDB Team"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }

# Native Qualia pipeline (replaces Candle for PINN)
qualia-core-db = { path = "../qualia-core-db", optional = true }

# WebGPU dependencies
wgpu = { version = "0.19", optional = true }
winit = { version = "0.29", optional = true }

# HTTP client for QPU APIs
reqwest = { version = "0.11", features = ["json"], optional = true }

# Base64 encoding for SMX format
base64 = "0.21"

# Random number generation for noise
rand = "0.8"

# Math utilities
nalgebra = { version = "0.32", default-features = false }
approx = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["qpu", "pinn", "webgpu"]
qpu = ["reqwest"]
pinn = ["qualia-core-db", "wgpu"]  # Use native Qualia pipeline instead of Candle
webgpu = ["wgpu", "winit"]

[lib]
name = "qualia_extensions"
path = "src/lib.rs"

[[bin]]
name = "qualia-extensions-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "qualia-extensions-cli"
path = "src/bin/cli.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
