[package]
name = "qualia-solid-bridge"
version = "0.0.9"
edition = "2021"

[dependencies]
qualia-core-db = { path = "../qualia-core-db" }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
core_affinity = "0.8"

[dev-dependencies]
dhat = "0.3"

[features]
dhat-heap = []
