[package]
name = "webizen-studio"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.9", features = ["router", "web"] }
qualia-core-db = { version = "0.0.11", path = "../qualia-core-db" }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wasm-bindgen = "0.2.123"
js-sys = "0.3"
web-sys = { version = "0.3.100", features = ["EventSource", "MessageEvent", "Window", "Storage", "WebSocket", "BinaryType", "History"] }
uuid = { version = "1.10", features = ["v4", "js"] }
futures-util = "0.3.30"
