[package]
name = "qualia_flutter_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
qualia-core-db = { path = "../../qualia-core-db" }
qualia-client-core = { path = "../../qualia-client-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
bip39 = { version = "2.2.2", features = ["rand"] }
rand = "0.10.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"
