[package]
name = "qualia_flutter_rust"
version = "0.0.10"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
flutter_rust_bridge = "=2.12.0"
qualia-core-db = { path = "../../qualia-core-db" }
qualia-client-core = { path = "../../qualia-client-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
lazy_static = "1.4"
log = "0.4"
arrayvec = "0.7"
bip39 = { version = "2.2.2", features = ["rand"] }
rand = "0.10.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"
sysinfo = "0.30"
